// Package interfaces å®šä¹‰å…±è¯†æ¨¡å—çš„å†…éƒ¨æ¥å£
//
// ğŸ¯ **èšåˆå™¨å†…éƒ¨æ¥å£å®šä¹‰**
//
// æœ¬æ–‡ä»¶å®šä¹‰èšåˆå™¨æ¨¡å—å†…éƒ¨å­ç»„ä»¶ä¹‹é—´çš„æ¥å£ï¼Œç”¨äºå®ç° PoW + è·ç¦»èšåˆï¼ˆXORï¼‰å…±è¯†æ¶æ„ï¼š
// - æ¯ä¸ªæ¥å£å¯¹åº”ä¸€ä¸ªå­ç›®å½•çš„ä¸šåŠ¡å®ç°
// - æ¥å£æ–¹æ³•ä»…ç”¨äºå†…éƒ¨å­ç»„ä»¶é—´äº¤äº’
// - èšåˆå…¥å£é€šè¿‡ AggregatorController åœ¨å†…éƒ¨ç»Ÿä¸€ç¼–æ’
//
// ğŸ—ï¸ **è®¾è®¡åŸåˆ™**ï¼š
// - åŸºäºç»Ÿä¸€èšåˆæ¶æ„ï¼šå€™é€‰æ”¶é›†æœŸ â†’ èšåˆé€‰æ‹©æœŸ â†’ ç»“æœåˆ†å‘æœŸ
// - èŒè´£å•ä¸€ï¼šæ¯ä¸ªæ¥å£å¯¹åº”æ˜ç¡®çš„èšåˆä¸šåŠ¡é˜¶æ®µ
// - é¿å…é‡å¤ï¼šç›´æ¥ä½¿ç”¨mempool.CandidatePoolç­‰å…¬å…±æ¥å£
// - çŠ¶æ€é©±åŠ¨ï¼šåŸºäº 8 çŠ¶æ€çš„èšåˆçŠ¶æ€æœºè¿›è¡Œæµç¨‹æ§åˆ¶
package interfaces

import (
	"context"
	"time"

	"github.com/libp2p/go-libp2p/core/peer"
	eventintegration "github.com/weisyn/v1/internal/core/consensus/integration/event"
	networkintegration "github.com/weisyn/v1/internal/core/consensus/integration/network"
	"github.com/weisyn/v1/pb/blockchain/block"
	"github.com/weisyn/v1/pkg/types"
)

// ============================================================================
//                           èšåˆå™¨å†…éƒ¨æ¥å£å®šä¹‰
// ============================================================================

// AggregatorController èšåˆå™¨æ§åˆ¶å™¨
//
// ğŸ¯ **èŒè´£**ï¼šä½œä¸ºèšåˆå™¨çš„ç»Ÿä¸€ç¼–æ’å…¥å£
//
// è®¾è®¡è¯´æ˜ï¼š
// - ç”± controller/ å­ç›®å½•å®ç°å…·ä½“ä¸šåŠ¡é€»è¾‘
// - èšåˆå…¥å£ç”±ç½‘ç»œå±‚å’ŒçŸ¿å·¥æœåŠ¡é€šè¿‡æ­¤æ¥å£è§¦å‘
// - ä¸å†å¯¹å¤–æš´éœ²ç‹¬ç«‹çš„ AggregatorService å…¬å…±æ¥å£
type AggregatorController interface {
	// ProcessAggregationRound å¤„ç†åŒºå—æäº¤çš„èšåˆè½®æ¬¡
	//
	// æ¥æ”¶ä¸€ä¸ªå€™é€‰åŒºå—ï¼Œæ‰§è¡Œå®Œæ•´çš„èšåˆå™¨å¤„ç†æµç¨‹ï¼š
	// 1. èšåˆèŠ‚ç‚¹é€‰ä¸¾åˆ¤æ–­ï¼ˆåŸºäºKademliaè·ç¦»ï¼‰
	// 2. éèšåˆèŠ‚ç‚¹ï¼šè½¬å‘ç»™æ­£ç¡®çš„èšåˆèŠ‚ç‚¹
	// 3. èšåˆèŠ‚ç‚¹ï¼šæ·»åŠ åˆ°å€™é€‰æ± å¹¶è§¦å‘èšåˆæµç¨‹
	// 4. æ‰§è¡Œå¤šå› å­è¯„ä¼°ã€åŒºå—é€‰æ‹©å’Œç»“æœåˆ†å‘
	//
	// è®¾è®¡æ„å›¾ï¼š
	// - ç»Ÿä¸€å¤„ç†ç½‘ç»œå’Œæœ¬åœ°çš„åŒºå—æäº¤
	// - å¤ç”¨ç°æœ‰çš„èšåˆèŠ‚ç‚¹é€‰ä¸¾å’Œå€™é€‰æ”¶é›†é€»è¾‘
	// - ä½œä¸ºèšåˆå™¨çš„æ ¸å¿ƒä¸šåŠ¡å…¥å£ï¼Œä»£æ›¿æ—§çš„åŸºäºé«˜åº¦çš„å¤„ç†
	//
	// @param ctx ä¸Šä¸‹æ–‡ï¼Œæ”¯æŒèšåˆä¸­æ–­å’Œè¶…æ—¶æ§åˆ¶
	// @param candidateBlock å€™é€‰åŒºå—ï¼ˆæ¥è‡ªç½‘ç»œæˆ–æœ¬åœ°çŸ¿å·¥ï¼‰
	// @return error èšåˆè¿‡ç¨‹ä¸­çš„é”™è¯¯
	ProcessAggregationRound(ctx context.Context, candidateBlock *block.Block) error

	// StartAggregatorService å¯åŠ¨èšåˆå™¨æœåŠ¡
	//
	// åˆå§‹åŒ–èšåˆå™¨çš„æ‰€æœ‰å­ç»„ä»¶å¹¶å¼€å§‹ç›‘å¬åŒºå—æäº¤å’Œç³»ç»Ÿäº‹ä»¶ã€‚
	// æœåŠ¡å¯åŠ¨åï¼Œèšåˆå™¨å°†å¤„äºå¾…å‘½çŠ¶æ€ï¼Œç­‰å¾…è§¦å‘èšåˆæµç¨‹ã€‚
	//
	// @param ctx ä¸Šä¸‹æ–‡ï¼Œæ”¯æŒå¯åŠ¨ä¸­æ–­
	// @return error å¯åŠ¨è¿‡ç¨‹ä¸­çš„é”™è¯¯
	StartAggregatorService(ctx context.Context) error

	// StopAggregatorService åœæ­¢èšåˆå™¨æœåŠ¡
	//
	// ä¼˜é›…å…³é—­èšåˆå™¨çš„æ‰€æœ‰å­ç»„ä»¶ï¼Œå®Œæˆæ­£åœ¨è¿›è¡Œçš„èšåˆæ“ä½œï¼Œ
	// å¹¶é‡Šæ”¾ç›¸å…³èµ„æºã€‚
	//
	// @param ctx ä¸Šä¸‹æ–‡ï¼Œæ”¯æŒåœæ­¢è¶…æ—¶æ§åˆ¶
	// @return error åœæ­¢è¿‡ç¨‹ä¸­çš„é”™è¯¯
	StopAggregatorService(ctx context.Context) error
}

// ============================================================================
//                        é˜¶æ®µ1ï¼šå€™é€‰ç”Ÿäº§æœŸæ¥å£
// ============================================================================

// AggregatorElection èšåˆèŠ‚ç‚¹é€‰ä¸¾å™¨
//
// ğŸ¯ **èŒè´£**ï¼šç¡®å®šæ€§èšåˆèŠ‚ç‚¹é€‰ä¸¾å’Œåˆ¤æ–­é€»è¾‘
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - åŸºäºHash(height || SEED) + KademliaClosestPeerç®—æ³•
// - åˆ¤æ–­å½“å‰èŠ‚ç‚¹æ˜¯å¦ä¸ºæŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹
// - æ”¯æŒæ¯é«˜åº¦é‡æ–°é€‰ä¸¾æœºåˆ¶
//
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type AggregatorElection interface {
	// IsAggregatorForHeight åˆ¤æ–­å½“å‰èŠ‚ç‚¹æ˜¯å¦ä¸ºæŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹
	//
	// ç¡®å®šæ€§ç®—æ³•ï¼š
	// 1. routing_key = Hash(height || SEED)ï¼Œå…¶ä¸­SEED = ä¸Šä¸€å·²ç¡®å®šåŒºå—å“ˆå¸Œ
	// 2. ä½¿ç”¨KademliaClosestPeerç®—æ³•è®¡ç®—æœ€è¿‘èŠ‚ç‚¹
	// 3. åˆ¤æ–­æœ€è¿‘èŠ‚ç‚¹æ˜¯å¦ä¸ºå½“å‰èŠ‚ç‚¹
	//
	// @param height åŒºå—é«˜åº¦
	// @return bool æ˜¯å¦ä¸ºèšåˆèŠ‚ç‚¹
	// @return error é€‰ä¸¾è¿‡ç¨‹ä¸­çš„é”™è¯¯
	IsAggregatorForHeight(height uint64) (bool, error)

	// GetAggregatorForHeight è·å–æŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹ID
	//
	// ç”¨äºåŒºå—è½¬å‘æ—¶ç¡®å®šç›®æ ‡èšåˆèŠ‚ç‚¹
	//
	// @param height åŒºå—é«˜åº¦
	// @return peer.ID èšåˆèŠ‚ç‚¹çš„peer ID
	// @return error è·å–è¿‡ç¨‹ä¸­çš„é”™è¯¯
	GetAggregatorForHeight(height uint64) (peer.ID, error)

	// GetAggregatorForHeightWithWaivers è·å–æŒ‡å®šé«˜åº¦çš„èšåˆèŠ‚ç‚¹IDï¼ˆæ’é™¤å¼ƒæƒèŠ‚ç‚¹ï¼‰
	//
	// V2 æ–°å¢ï¼šæ”¯æŒå¼ƒæƒä¸é‡é€‰æœºåˆ¶
	// ç”¨äºåŒºå—è½¬å‘æ—¶ç¡®å®šç›®æ ‡èšåˆèŠ‚ç‚¹ï¼Œæ’é™¤å·²çŸ¥å¼ƒæƒçš„èŠ‚ç‚¹ï¼Œé¿å…å›ç¯
	//
	// @param height åŒºå—é«˜åº¦
	// @param waivedAggregators å·²å¼ƒæƒçš„èšåˆå™¨èŠ‚ç‚¹IDåˆ—è¡¨ï¼ˆé¿å…å›ç¯ï¼‰
	// @return peer.ID èšåˆèŠ‚ç‚¹çš„peer IDï¼ˆæ’é™¤å¼ƒæƒèŠ‚ç‚¹åçš„æœ€è¿‘é‚»ï¼‰
	// @return error è·å–è¿‡ç¨‹ä¸­çš„é”™è¯¯
	GetAggregatorForHeightWithWaivers(height uint64, waivedAggregators []peer.ID) (peer.ID, error)

	// ValidateAggregatorEligibility éªŒè¯èšåˆèŠ‚ç‚¹èµ„æ ¼
	//
	// éªŒè¯èŠ‚ç‚¹æ˜¯å¦å…·å¤‡æˆä¸ºèšåˆèŠ‚ç‚¹çš„åŸºæœ¬æ¡ä»¶
	//
	// @param peerID å¾…éªŒè¯çš„èŠ‚ç‚¹ID
	// @return bool æ˜¯å¦ç¬¦åˆèšåˆèŠ‚ç‚¹èµ„æ ¼
	// @return error éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
	ValidateAggregatorEligibility(peerID peer.ID) (bool, error)
}

// NetworkProtocolHandler ç½‘ç»œåè®®å¤„ç†å™¨
//
// ğŸ¯ **èŒè´£**ï¼šå¤„ç†èšåˆå™¨ç›¸å…³çš„ç½‘ç»œåè®®æ¶ˆæ¯
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - ç»§æ‰¿UnifiedAggregatorRouteræ¥å£ï¼ˆæµå¼åè®®å¤„ç†ï¼‰
// - ç»§æ‰¿UnifiedAggregatorSubscribeRouteræ¥å£ï¼ˆè®¢é˜…åè®®å¤„ç†ï¼‰
// - æä¾›aggregatorç‰¹æœ‰çš„ç½‘ç»œæ–¹æ³•
//
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type NetworkProtocolHandler interface {
	// ç»§æ‰¿åŸºç¡€ç½‘ç»œæ¥å£ï¼Œé¿å…é‡å¤å®šä¹‰æ–¹æ³•
	networkintegration.UnifiedAggregatorRouter          // æµå¼åè®®å¤„ç†
	networkintegration.UnifiedAggregatorSubscribeRouter // è®¢é˜…åè®®å¤„ç†

	// æ³¨æ„ï¼šå·²ç§»é™¤ ForwardBlockToAggregator æ–¹æ³•
	// è½¬å‘é€»è¾‘å·²ç§»åŠ¨åˆ° ProcessAggregationRound å†…éƒ¨å¤„ç†
}

// ============================================================================
//                        é˜¶æ®µ2ï¼šèšåˆé€‰æ‹©æœŸæ¥å£
// ============================================================================

// CandidateCollector å€™é€‰æ”¶é›†å™¨
//
// ğŸ¯ **èŒè´£**ï¼šç®¡ç†å€™é€‰åŒºå—æ”¶é›†çª—å£ï¼ˆä»…çª—å£ç®¡ç†ï¼Œä¸é‡å¤å®ç°å€™é€‰æ± ï¼‰
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - ç®¡ç†æ”¶é›†çª—å£çš„å¯åŠ¨å’Œå…³é—­
// - é…ç½®æ”¶é›†çª—å£æŒç»­æ—¶é—´
// - ä¸mempool.CandidatePoolåä½œè·å–å€™é€‰
// - æ”¯æŒn+1é«˜åº¦éªŒè¯
//
// é‡è¦ï¼šä¸é‡å¤å®ç°å€™é€‰æ± ï¼Œç›´æ¥ä½¿ç”¨mempool.CandidatePool
//
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type CandidateCollector interface {
	// StartCollectionWindow å¯åŠ¨å€™é€‰æ”¶é›†çª—å£
	//
	// æ”¶é›†çª—å£æœºåˆ¶æ˜¯èšåˆæ¶æ„çš„æ ¸å¿ƒï¼š
	// - åœ¨æŒ‡å®šæ—¶é—´çª—å£å†…æ”¶é›†å¤šä¸ªå€™é€‰åŒºå—
	// - é˜²æ­¢åˆ†å‰æ¶åŒ–ï¼Œé€šè¿‡æ™ºèƒ½é€‰æ‹©è€Œéç½‘ç»œç«äº‰
	//
	// @param height æ”¶é›†çš„ç›®æ ‡é«˜åº¦
	// @param duration æ”¶é›†çª—å£æŒç»­æ—¶é—´
	// @return error å¯åŠ¨è¿‡ç¨‹ä¸­çš„é”™è¯¯
	StartCollectionWindow(height uint64, duration time.Duration) error

	// CloseCollectionWindow å…³é—­æ”¶é›†çª—å£
	//
	// å…³é—­çª—å£å¹¶ä»mempool.CandidatePoolè·å–æ”¶é›†åˆ°çš„å€™é€‰åŒºå—
	//
	// @param height ç›®æ ‡é«˜åº¦
	// @return []CandidateBlock æ”¶é›†åˆ°çš„å€™é€‰åŒºå—åˆ—è¡¨
	// @return error å…³é—­è¿‡ç¨‹ä¸­çš„é”™è¯¯
	CloseCollectionWindow(height uint64) ([]types.CandidateBlock, error)

	// IsCollectionActive æ£€æŸ¥æ”¶é›†çª—å£æ˜¯å¦æ´»è·ƒ
	//
	// @param height ç›®æ ‡é«˜åº¦
	// @return bool æ”¶é›†çª—å£æ˜¯å¦æ´»è·ƒ
	IsCollectionActive(height uint64) bool

	// GetCollectionProgress è·å–æ”¶é›†è¿›åº¦
	//
	// @param height ç›®æ ‡é«˜åº¦
	// @return CollectionProgress æ”¶é›†è¿›åº¦ä¿¡æ¯
	// @return error è·å–è¿‡ç¨‹ä¸­çš„é”™è¯¯
	GetCollectionProgress(height uint64) (*types.CollectionProgress, error)

	// ClearCandidatePool æ¸…ç©ºå€™é€‰åŒºå—å†…å­˜æ± 
	//
	// åœ¨èšåˆé€‰æ‹©å®Œæˆå¹¶åˆ†å‘åè°ƒç”¨ï¼Œæ¸…ç©ºæ‰€æœ‰å€™é€‰åŒºå—å¼€å§‹ä¸‹ä¸€è½®
	// è¿™æ˜¯å½“å‰èšåˆæ¶æ„çš„æ ¸å¿ƒæœºåˆ¶ï¼šé€‰æ‹©å®Œæˆåæ¸…ç©ºå†…å­˜æ± ï¼Œè€Œéæ ‡è®°å·²å¤„ç†
	//
	// @return int æ¸…ç†çš„å€™é€‰åŒºå—æ•°é‡
	// @return error æ¸…ç†è¿‡ç¨‹ä¸­çš„é”™è¯¯
	ClearCandidatePool() (int, error)
}

// DecisionCalculator åŸºç¡€éªŒè¯å™¨
//
// ğŸ¯ **èŒè´£**ï¼šæ‰§è¡Œå€™é€‰åŒºå—çš„åŸºç¡€åˆæ³•æ€§éªŒè¯
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - åŸºç¡€PoWéªŒè¯ï¼šç¡®ä¿å€™é€‰åŒºå—æ»¡è¶³å·¥ä½œé‡è¯æ˜è¦æ±‚
// - æ ¼å¼å®Œæ•´æ€§éªŒè¯ï¼šæ£€æŸ¥åŒºå—å’Œäº¤æ˜“çš„åŸºæœ¬æ ¼å¼
// - éªŒè¯ç»“æœç”Ÿæˆï¼šè¿”å›åŸºç¡€éªŒè¯ç»“æœ
//
// âš ï¸ æ³¨æ„ï¼šå®é™…çš„åŒºå—é€‰æ‹©ç”±distance_selectoræ¨¡å—ä¸­çš„XORè·ç¦»ç®—æ³•å®Œæˆ
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type DecisionCalculator interface {
	// ValidateCandidate æ‰§è¡ŒåŸºç¡€éªŒè¯
	//
	// éªŒè¯å†…å®¹ï¼š
	// - åŸºç¡€PoWéªŒè¯ï¼šéªŒè¯åŒºå—æ˜¯å¦æ»¡è¶³PoWè¦æ±‚
	// - æ ¼å¼æ£€æŸ¥ï¼šéªŒè¯åŒºå—å¤´å’Œäº¤æ˜“æ ¼å¼
	//
	// @param candidate å¾…éªŒè¯çš„å€™é€‰åŒºå—
	// @return *CandidateValidationResult åŸºç¡€éªŒè¯ç»“æœ
	// @return error éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
	ValidateCandidate(candidate *types.CandidateBlock) (*types.CandidateValidationResult, error)

	// EvaluateAllCandidates æ‰¹é‡åŸºç¡€éªŒè¯æ‰€æœ‰å€™é€‰åŒºå—
	//
	// å¯¹å€™é€‰åŒºå—æ‰§è¡ŒåŸºç¡€éªŒè¯ï¼Œä»…è¿”å›é€šè¿‡éªŒè¯çš„å€™é€‰åŒºå—åˆ—è¡¨
	//
	// @param candidates å€™é€‰åŒºå—åˆ—è¡¨
	// @return []CandidateBlock é€šè¿‡éªŒè¯çš„å€™é€‰åŒºå—åˆ—è¡¨
	// @return error éªŒè¯è¿‡ç¨‹ä¸­çš„é”™è¯¯
	EvaluateAllCandidates(candidates []types.CandidateBlock) ([]types.CandidateBlock, error)

	// GetEvaluationStatistics è·å–éªŒè¯ç»Ÿè®¡ä¿¡æ¯
	//
	// è¿”å›éªŒè¯ç»Ÿè®¡ä¿¡æ¯
	//
	// @return *EvaluationStats ç»Ÿè®¡æ•°æ®
	// @return error è·å–è¿‡ç¨‹ä¸­çš„é”™è¯¯
	GetEvaluationStatistics() (*types.EvaluationStats, error)
}

// ============================================================================
//                        é˜¶æ®µ3ï¼šç»“æœåˆ†å‘æœŸæ¥å£
// ============================================================================

// ResultDistributor ç»“æœåˆ†å‘å™¨
//
// ğŸ¯ **èŒè´£**ï¼šåˆ†å‘èšåˆé€‰æ‹©ç»“æœåˆ°å…¨ç½‘
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - æ„å»ºåˆ†å‘æ¶ˆæ¯å’Œé€‰æ‹©è¯æ˜
// - æ‰§è¡Œå¤šè·¯å¾„åˆ†å‘ç­–ç•¥
// - ç›‘æ§å…±è¯†æ”¶æ•›çŠ¶æ€
//
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type ResultDistributor interface {
	// DistributeSelectedBlock åˆ†å‘é€‰ä¸­çš„åŒºå—
	//
	// å°†èšåˆé€‰æ‹©çš„æœ€ä¼˜åŒºå—åˆ†å‘åˆ°å…¨ç½‘
	//
	// @param ctx ä¸Šä¸‹æ–‡ï¼Œæ”¯æŒåˆ†å‘ä¸­æ–­
	// @param selected é€‰ä¸­çš„åŒºå—
	// @param proof è·ç¦»é€‰æ‹©è¯æ˜
	// @param totalCandidates æ€»å€™é€‰åŒºå—æ•°é‡
	// @return error åˆ†å‘è¿‡ç¨‹ä¸­çš„é”™è¯¯
	DistributeSelectedBlock(ctx context.Context, selected *types.CandidateBlock, proof *types.DistanceSelectionProof, totalCandidates uint32) error

	// BroadcastToNetwork ç½‘ç»œå¹¿æ’­
	//
	// é€šè¿‡ä¼˜åŒ–çš„åˆ†å‘æ‹“æ‰‘è¿›è¡Œç½‘ç»œå¹¿æ’­
	//
	// @param ctx ä¸Šä¸‹æ–‡ï¼Œæ”¯æŒå¹¿æ’­ä¸­æ–­
	// @param message è·ç¦»åˆ†å‘æ¶ˆæ¯
	// @return error å¹¿æ’­è¿‡ç¨‹ä¸­çš„é”™è¯¯
	BroadcastToNetwork(ctx context.Context, message *types.DistanceDistributionMessage) error
}

// ============================================================================
//                           é€šç”¨æ”¯æ’‘æ¥å£
// ============================================================================

// AggregationState èšåˆçŠ¶æ€æšä¸¾ç±»å‹åˆ«å
//
// ğŸ¯ **çŠ¶æ€å®šä¹‰**ï¼šèšåˆå™¨çš„ 8 çŠ¶æ€æµç¨‹æ§åˆ¶
//
// ä½¿ç”¨ types.AggregationState ä½œä¸ºåº•å±‚ç±»å‹
type AggregationState = types.AggregationState

// AggregatorStateManager èšåˆå™¨çŠ¶æ€ç®¡ç†å™¨
//
// ğŸ¯ **èŒè´£**ï¼šç®¡ç†èšåˆå™¨çš„çŠ¶æ€æœºè½¬æ¢
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - ç»´æŠ¤ 8 çŠ¶æ€èšåˆçŠ¶æ€æœº
// - éªŒè¯çŠ¶æ€è½¬æ¢çš„åˆæ³•æ€§
// - è®°å½•çŠ¶æ€è½¬æ¢å†å²
// - æ”¯æŒèšåˆèŠ‚ç‚¹"æŒ‰éœ€æ¿€æ´»ï¼Œåˆ†å‘åç»“æŸ"çš„ç”Ÿå‘½å‘¨æœŸ
//
// ä»…åœ¨ aggregator å†…éƒ¨å­ç»„ä»¶é—´ä½¿ç”¨
type AggregatorStateManager interface {
	// GetCurrentState è·å–å½“å‰èšåˆçŠ¶æ€
	//
	// @return AggregationState å½“å‰èšåˆçŠ¶æ€
	GetCurrentState() AggregationState

	// TransitionTo è½¬æ¢åˆ°ç›®æ ‡çŠ¶æ€
	//
	// æ‰§è¡ŒçŠ¶æ€è½¬æ¢ï¼ŒåŒ…å«åˆæ³•æ€§éªŒè¯å’Œè½¬æ¢é€»è¾‘
	//
	// @param newState ç›®æ ‡çŠ¶æ€
	// @return error çŠ¶æ€è½¬æ¢é”™è¯¯ï¼ˆå¦‚éæ³•è½¬æ¢ï¼‰
	TransitionTo(newState AggregationState) error

	// EnsureState ç¡®ä¿å¤„äºç›®æ ‡çŠ¶æ€ï¼ˆå¹‚ç­‰æ“ä½œï¼‰
	//
	// ç”¨äºé”™è¯¯æ¢å¤ã€çŠ¶æ€ä¿®å¤ç­‰åœºæ™¯ï¼Œå¦‚æœå·²ç»æ˜¯ç›®æ ‡çŠ¶æ€åˆ™ç›´æ¥è¿”å›æˆåŠŸ
	//
	// @param targetState ç›®æ ‡çŠ¶æ€
	// @return error çŠ¶æ€è½¬æ¢é”™è¯¯ï¼ˆå¦‚éæ³•è·¯å¾„ï¼‰
	EnsureState(targetState AggregationState) error

	// EnsureIdle ç¡®ä¿å¤„äº Idle çŠ¶æ€çš„ä¾¿æ·æ–¹æ³•
	//
	// ç”¨äºåªè¯»æ¨¡å¼å¼ƒæƒã€åœæ­¢èšåˆã€é“¾é‡ç»„æ¢å¤ç­‰åœºæ™¯
	//
	// @return error çŠ¶æ€è½¬æ¢é”™è¯¯
	EnsureIdle() error

	// IsValidTransition éªŒè¯çŠ¶æ€è½¬æ¢
	//
	// æ£€æŸ¥ä»å½“å‰çŠ¶æ€åˆ°ç›®æ ‡çŠ¶æ€çš„è½¬æ¢æ˜¯å¦åˆæ³•
	//
	// @param from æºçŠ¶æ€
	// @param to ç›®æ ‡çŠ¶æ€
	// @return bool è½¬æ¢æ˜¯å¦åˆæ³•
	IsValidTransition(from, to AggregationState) bool

	// GetCurrentHeight è·å–å½“å‰èšåˆé«˜åº¦
	//
	// @return uint64 å½“å‰æ­£åœ¨èšåˆçš„åŒºå—é«˜åº¦
	GetCurrentHeight() uint64

	// SetCurrentHeight è®¾ç½®å½“å‰èšåˆé«˜åº¦
	//
	// @param height èšåˆé«˜åº¦
	// @return error è®¾ç½®è¿‡ç¨‹ä¸­çš„é”™è¯¯
	SetCurrentHeight(height uint64) error
}

// ============================================================================
//                           äº‹ä»¶å¤„ç†æ¥å£å®šä¹‰
// ============================================================================

// AggregatorEventHandler èšåˆå™¨äº‹ä»¶å¤„ç†æ¥å£
//
// ğŸ¯ **èŒè´£**ï¼šå¤„ç†èšåˆå™¨å…³å¿ƒçš„ç³»ç»Ÿäº‹ä»¶
//
// æ ¸å¿ƒåŠŸèƒ½ï¼š
// - å¤„ç†åŒºå—é“¾é‡ç»„äº‹ä»¶ï¼Œè°ƒæ•´èšåˆå™¨çŠ¶æ€
// - å¤„ç†ç½‘ç»œè´¨é‡å˜åŒ–äº‹ä»¶ï¼Œä¼˜åŒ–èšåˆç­–ç•¥
// - ç¡®ä¿äº‹ä»¶å¤„ç†çš„ç»Ÿä¸€æ€§å’Œå¯æµ‹è¯•æ€§
//
// è®¾è®¡è¯´æ˜ï¼š
// - ç»§æ‰¿ eventintegration.AggregatorEventSubscriber æ¥å£
// - ç”± event_handler/ å­ç›®å½•å®ç°å…·ä½“ä¸šåŠ¡é€»è¾‘
// - ä¸å…¶ä»–èšåˆå™¨ç»„ä»¶æ¾è€¦åˆäº¤äº’
type AggregatorEventHandler interface {
	eventintegration.AggregatorEventSubscriber // ç»§æ‰¿äº‹ä»¶è®¢é˜…æ¥å£

	// æ³¨æ„ï¼šä¸æ·»åŠ é¢å¤–æ–¹æ³•ï¼Œç›´æ¥ç»§æ‰¿integrationå±‚å®šä¹‰çš„æ‰€æœ‰äº‹ä»¶å¤„ç†æ–¹æ³•
	// è¿™æ ·ç¡®ä¿æ¥å£çš„ç»Ÿä¸€æ€§å’Œå¯æµ‹è¯•æ€§
}

// ============================================================================
//                           æ¿€åŠ±éªŒè¯æ¥å£ï¼ˆå†…éƒ¨ï¼‰
// ============================================================================

// IncentiveValidator èšåˆå™¨ä¾§æ¿€åŠ±éªŒè¯å™¨æ¥å£ï¼ˆå†…éƒ¨ï¼‰
//
// ğŸ¯ **èšåˆå™¨ä¾§æ¿€åŠ±éªŒè¯**
//
// èŒè´£:
//   - éªŒè¯Coinbaseè´¹ç”¨å®ˆæ’ï¼ˆé›¶å¢å‘ï¼‰
//   - éªŒè¯èµåŠ©é¢†å–äº¤æ˜“ç»“æ„å’Œæ•°é‡çº¦æŸ
//   - è¯†åˆ«æ¿€åŠ±åŒºä¸æ™®é€šäº¤æ˜“åŒº
//
// è°ƒç”¨æ—¶æœº:
//
//	BlockManager.validateBlock() éªŒè¯åŒºå—æ—¶è°ƒç”¨
//
// å®ç°ä½ç½®:
//
//	internal/core/consensus/aggregator/validator/incentive.go
//
// æ³¨æ„ï¼šè¿™æ˜¯Consensuså†…éƒ¨æ¥å£ï¼Œä¸å¯¹å¤–æš´éœ²
type IncentiveValidator interface {
	// ValidateIncentiveTxs éªŒè¯åŒºå—ä¸­çš„æ¿€åŠ±äº¤æ˜“
	//
	// åœ¨ BlockManager.validateBlock() ä¸­è°ƒç”¨ã€‚
	//
	// å‚æ•°:
	//   ctx: ä¸Šä¸‹æ–‡
	//   block: å¾…éªŒè¯çš„åŒºå—
	//   minerAddr: çŸ¿å·¥åœ°å€ï¼ˆç”¨äºéªŒè¯Coinbaseè¾“å‡ºOwnerï¼‰
	//
	// è¿”å›:
	//   error: éªŒè¯é”™è¯¯ï¼Œnilè¡¨ç¤ºé€šè¿‡
	//
	// éªŒè¯å†…å®¹:
	//   1. Coinbaseä½äºé¦–ä½
	//   2. Coinbaseè´¹ç”¨å®ˆæ’ï¼ˆæœŸæœ›è´¹ç”¨ == Coinbaseè¾“å‡ºï¼‰
	//   3. Coinbaseæ‰€æœ‰è¾“å‡ºOwner = minerAddr
	//   4. èµåŠ©é¢†å–äº¤æ˜“ç»“æ„æ­£ç¡®
	//   5. èµåŠ©é¢†å–äº¤æ˜“æ•°é‡ä¸è¶…è¿‡ä¸Šé™
	//
	// çº¦æŸ:
	//   - å¿…é¡»åœ¨äº¤æ˜“çº§éªŒè¯ï¼ˆTxVerifierï¼‰ä¹‹å‰è°ƒç”¨
	//   - éªŒè¯å¤±è´¥åº”æ‹’ç»æ•´ä¸ªåŒºå—
	ValidateIncentiveTxs(
		ctx context.Context,
		block *block.Block,
		minerAddr []byte,
	) error
}

// InternalAggregatorService å†…éƒ¨èšåˆå™¨æœåŠ¡èšåˆæ¥å£
//
// ğŸ¯ **èŒè´£**ï¼šèšåˆæ‰€æœ‰å†…éƒ¨æ¥å£ï¼Œæä¾›å®Œæ•´çš„èšåˆæœåŠ¡èƒ½åŠ›ï¼ˆç»Ÿä¸€ Aggregator + è·ç¦»é€‰æ‹©ï¼‰
//
// è®¾è®¡è¯´æ˜ï¼š
// - èšåˆæ‰€æœ‰å­ç»„ä»¶æ¥å£
// - ç”± manager.go å®ç°å®Œæ•´æœåŠ¡
// - æ”¯æŒç»Ÿä¸€çš„ä¾èµ–æ³¨å…¥å’Œæµ‹è¯•
// - é€šè¿‡NetworkProtocolHandlerç»§æ‰¿ç½‘ç»œæ¥å£ï¼Œå§”æ‰˜ç»™network_handlerå®ç°
//
// æ³¨æ„ï¼šè¿™æ˜¯å†…éƒ¨èšåˆæ¥å£ï¼Œä¸å¯¹å¤–æš´éœ²
// DistanceSelector è·ç¦»é€‰æ‹©å™¨æ¥å£
//
// ğŸ¯ **èŒè´£**ï¼šåŸºäºXORè·ç¦»çš„ç¡®å®šæ€§åŒºå—é€‰æ‹©
//
// æ ¸å¿ƒç®—æ³•ï¼š
// Distance(candidate, parent) = XOR(BigInt(candidate.hash), BigInt(parent.hash))
// selected = argmin(Distance(candidate.BlockHash, parent.BlockHash))
//
// è®¾è®¡è¯´æ˜ï¼š
// - æ›¿æ¢å¤æ‚çš„å¤šå› å­è¯„åˆ†ç³»ç»Ÿ
// - æä¾›ç¡®å®šæ€§çš„åŒºå—é€‰æ‹©æœºåˆ¶
// - æ”¯æŒé€‰æ‹©è¯æ˜ç”Ÿæˆå’ŒéªŒè¯
// - ç”± distance_selector/ å­ç›®å½•å®ç°
type DistanceSelector interface {
	// CalculateDistances è®¡ç®—æ‰€æœ‰å€™é€‰åŒºå—ä¸çˆ¶åŒºå—çš„XORè·ç¦»
	//
	// å‚æ•°ï¼š
	// - candidates: å€™é€‰åŒºå—åˆ—è¡¨
	// - parentBlockHash: çˆ¶åŒºå—å“ˆå¸Œï¼ˆè·ç¦»è®¡ç®—åŸºå‡†ï¼‰
	//
	// è¿”å›ï¼š
	// - []types.DistanceResult: è·ç¦»è®¡ç®—ç»“æœåˆ—è¡¨
	// - error: è®¡ç®—é”™è¯¯
	CalculateDistances(ctx context.Context, candidates []types.CandidateBlock, parentBlockHash []byte) ([]types.DistanceResult, error)

	// SelectClosestBlock é€‰æ‹©è·ç¦»æœ€è¿‘çš„åŒºå—
	//
	// å‚æ•°ï¼š
	// - distanceResults: è·ç¦»è®¡ç®—ç»“æœ
	//
	// è¿”å›ï¼š
	// - *types.CandidateBlock: é€‰ä¸­çš„åŒºå—
	// - error: é€‰æ‹©é”™è¯¯
	SelectClosestBlock(ctx context.Context, distanceResults []types.DistanceResult) (*types.CandidateBlock, error)

	// GenerateDistanceProof ç”Ÿæˆè·ç¦»é€‰æ‹©è¯æ˜
	//
	// å‚æ•°ï¼š
	// - selected: é€‰ä¸­çš„åŒºå—
	// - allResults: æ‰€æœ‰è·ç¦»è®¡ç®—ç»“æœ
	// - parentBlockHash: çˆ¶åŒºå—å“ˆå¸Œ
	//
	// è¿”å›ï¼š
	// - *types.DistanceSelectionProof: é€‰æ‹©è¯æ˜
	// - error: è¯æ˜ç”Ÿæˆé”™è¯¯
	GenerateDistanceProof(ctx context.Context, selected *types.CandidateBlock, allResults []types.DistanceResult, parentBlockHash []byte) (*types.DistanceSelectionProof, error)

	// VerifyDistanceSelection éªŒè¯è·ç¦»é€‰æ‹©çš„æ­£ç¡®æ€§
	//
	// å‚æ•°ï¼š
	// - selected: å£°ç§°é€‰ä¸­çš„åŒºå—
	// - proof: é€‰æ‹©è¯æ˜
	//
	// è¿”å›ï¼š
	// - error: éªŒè¯é”™è¯¯ï¼Œnilè¡¨ç¤ºéªŒè¯é€šè¿‡
	VerifyDistanceSelection(ctx context.Context, selected *types.CandidateBlock, proof *types.DistanceSelectionProof) error

	// GetDistanceStatistics è·å–è·ç¦»é€‰æ‹©ç»Ÿè®¡ä¿¡æ¯
	//
	// è¿”å›ï¼š
	// - *types.DistanceStatistics: ç»Ÿè®¡ä¿¡æ¯
	GetDistanceStatistics() *types.DistanceStatistics
}

type InternalAggregatorService interface {
	AggregatorController   // å…¬å…±æ¥å£å®ç°
	AggregatorElection     // èšåˆèŠ‚ç‚¹é€‰ä¸¾
	NetworkProtocolHandler // ç½‘ç»œåè®®å¤„ç†ï¼ˆåŒ…å«æ‰€æœ‰ç½‘ç»œåè®®å¤„ç†èƒ½åŠ›ï¼‰
	AggregatorEventHandler // äº‹ä»¶å¤„ç†ï¼ˆå¤„ç†ç³»ç»Ÿäº‹ä»¶å¦‚é‡ç»„ã€ç½‘ç»œå˜åŒ–ï¼‰
	CandidateCollector     // å€™é€‰æ”¶é›†
	DecisionCalculator     // åŸºç¡€éªŒè¯å™¨
	DistanceSelector       // è·ç¦»é€‰æ‹©å™¨ï¼ˆæ ¸å¿ƒé€‰æ‹©ç®—æ³•ï¼‰
	ResultDistributor      // ç»“æœåˆ†å‘
	AggregatorStateManager // çŠ¶æ€ç®¡ç†
}
